Minor improvement error handling - fix mobile alignment

--- a/public/global.css
+++ b/public/global.css
@@ -72,9 +72,14 @@ button:not(:disabled):active {
 	background-color: #ddd;
 }
 
-button:focus {
-	border-color: #666;
+button:focus-visible,
+a:focus-visible {
+	outline: red;
+	outline: #bbf2b5 solid 2px;
+	border: #bbf2b5 solid 2px;
+
 }
+
 
 :root {
 	/* --color-primary: # */
